[tool.poetry]
name = "oar"
version = "3.0.0.dev12"
description = "OAR: Versatile Resource and Job Manager"
authors = ["Olivier Richard", "Adrien Faure", "Salem Harrache"]
license = "GPL-2.0-or-later"
classifiers=[
    "Development Status :: 5 - Beta",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Clustering",
]

[tool.poetry.scripts]
oar-database-migrate = 'oar.cli.db.commands.migrate:cli'
oar-database-archive = 'oar.cli.db.commands.archive:cli'
oar-database-manage = 'oar.cli.db.commands.manage:cli'
oar-almighty = 'oar.modules.almighty:main'
oar-bipbip-commander = 'oar.modules.bipbip_commander:main'
oar-appendice-proxy = 'oar.modules.appendice_proxy:main'
oar-greta = 'oar.modules.greta:main'
'.oarsub' = 'oar.cli.oarsub:cli'
'.oarstat' = 'oar.cli.oarstat:cli'
'.oardel' = 'oar.cli.oardel:cli'
'.oarhold' = 'oar.cli.oarhold:cli'
'.oarresume' = 'oar.cli.oarresume:cli'
'.oarnodes' = 'oar.cli.oarnodes:cli'
'.oarnotify' = 'oar.cli.oarnotify:cli'
'.oarqueue' = 'oar.cli.oarqueue:cli'
'.oarconnect' = 'oar.cli.oarconnect:cli'
'.oarremoveresource' = 'oar.cli.oarremoveresource:cli'
'.oarnodesetting' = 'oar.cli.oarnodesetting:cli'
'.oaraccounting' = 'oar.cli.oaraccounting:cli'
'.oarproperty' = 'oar.cli.oarproperty:cli'
'.oarwalltime' = 'oar.cli.oarwalltime:cli'
oar2trace = 'oar.cli.oar2trace:cli'
_oarbench = 'oar.cli._oarbench:cli'
kao = 'oar.kao.kao:main'
kamelot = 'oar.kao.kamelot:main'
kamelot-fifo = 'oar.kao.kamelot_fifo:main'
bataar = 'oar.kao.bataar:bataar'
oar-batsim-sched-proxy = 'oar.kao.batsim_sched_proxy:cli'
oar-sarko = 'oar.modules.sarko:main'
oar-finaud = 'oar.modules.finaud:main'
oar-leon = 'oar.modules.leon:main'
oar-node-change-state = 'oar.modules.node_change_state:main'
oar-bipbip = 'oar.modules.bipbip:main'
oar-proxy-cleaner = 'oar.cli.oarproxycleaner:cli'


[tool.poetry.dependencies]
python = ">=3.10, <4"
SQLAlchemy-Utils = ">=0.37.3"
SQLAlchemy = "^2.0.0"
alembic = ">1.7.0"
tabulate = ">=0.8.9, <1.0"
Click = ">=8.0.0"
pyzmq = "<25.0, >=22.0.3"
requests = ">=2.24.0"
procset = "^1.0"
# procset = { git = "https://gitlab.inria.fr/bleuse/procset.py", rev="typing" }
# procset = { path = "/home/adfaure/code/procset.py", develop = false }
simplejson = "^3.17.2"
psutil = "^5.8.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
escapism = "^1.0.1"
toml = ">0.10.0"
fastapi = ">0.68.0"
uvicorn = ">=0.14.0"
python-multipart = ">=0.0.5"
PyYAML = ">=5.0"
psycopg2 = "^2.8.6"
#pybatsim = "^3.2.0"
ptpython = "^3.0.20"
rich = ">=12.5, <=13.5.5"
ClusterShell = ">=1.8"
httpx = ">=0.23.0"
bcrypt = "^4.0.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.dev-dependencies]
zerorpc = "^0.6.3"
pytest = "^6.2.4"
pytest-cov = "^2.12.0"
#pytest-console-scripts = "^1.2.0"
pexpect = "^4.8.0"
sphinx = "^4.0.2"
black = "22.6.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
pre-commit = "^2.12.1"
simpy = "^4.0.1"
redis = "^3.5.3"


[tool.poetry.group.docs.dependencies]
sphinx-rtd-theme = "^1.3.0"


[tool.poetry.group.dev.dependencies]
vulture = "^2.10"
types-toml = "^0.10.8.7"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
src_paths = ["oar", "tests"]
skip = ["tests/lib/etc", ".venv"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
